--- a/src/widgets/userProfileData/userProfileData.scss
+++ b/src/widgets/userProfileData/userProfileData.scss
@@ -1,70 +1,41 @@
-.userProfileData{
+.userProfileData {
     display: flex;
     gap: 8px;
     align-items: center;
-    
-    > img{
+    flex: 1;
+    max-width: 300px;
+    overflow: hidden;
+
+    > img {
         border-radius: 50%;
         width: 44px;
         height: 44px;
         aspect-ratio: 1/1;
         object-fit: cover;
         object-position: top;
-
     }
 
-    > .userProfileData_container{
+    > .userProfileData_container {
         display: flex;
         flex-direction: column;
         justify-content: space-between;
         gap: 4px;
-        
-        > .userProfileData_headerGroup{
-            display: flex;
-            align-items: center;
-            gap: 4px;
+        min-width: 0;
 
-            > span{
+        > .userProfileData_headerGroup {
+        display: flex;
+        align-items: center;
+        gap: 4px;
+        min-width: 0;
+
+            > span {
+                flex: 1;
                 font-weight: 600;
                 font-size: 20px;
-                line-height: 100%;
-                letter-spacing: 0%;
-            }
-        }
-
-        > .userProfileData_itemData{
-            display: flex;
-            gap: 8px;
-
-            > .userProfileData_itemData_top{
-                display: flex;
-                align-items: center;
-                padding: 2px 8px;
-                background-color: #EDB900;
-                border-radius: 4px;
-                gap: 4px;
-
-                > span{
-                    color: black;
-                    font-weight: 600;
-                    font-size: 10px;
-                    line-height: 14px;
-                    letter-spacing: 0%;
-                }
-                
-            }
-
-            > .userProfileData_itemData_reating{
-                display: flex;
-                align-items: center;
-                gap: 4px;
-
-                > span{
-                    font-weight: 600;
-                    font-size: 12px;
-                    line-height: 100%;
-                    letter-spacing: 0%;
-                }
+                line-height: 1.2;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                white-space: nowrap;
             }
         }
     }
